# HIT-19Fall-ML-Lab

./: .gitignore  README.md
machien-learing-lab1/: BasicSettings.h  CMakeLists.txt  Data.cpp  Data.h  LeastSquare.cpp  LeastSquare.h  ProductStrategy.cpp  ProductStrategy.h  README.md  draw.py  main.cpp
machine-learing-lab1/: CMakeLists.txt  Data.h  LeastSquare.h  ProductStrategy.h  README.md  draw.py  main.cpp
machine-learing-lab2/: BasicSettings.h  CMakeLists.txt  Data.cpp  Data.h  LearingAlgorithm.cpp  LearingAlgorithm.h  LogisticRegression.cpp  LogisticRegression.h  MultivariateNormalRandomVariable.h  ProductStrategy.cpp  ProductStrategy.h  README.md  draw.py  main.cpp
machine-learing-lab3/: GetData.py  README.md  main.py
machine-learing-lab4/: PCA.py  README.md
